[gd_scene load_steps=23 format=3 uid="uid://b1mdnhyr4s07r"]

[ext_resource type="Script" path="res://scripts/actors/player.gd" id="1_okgwv"]
[ext_resource type="Texture2D" uid="uid://b5bksrwba8t4x" path="res://assets/player_walk.png" id="2_4gel4"]
[ext_resource type="PackedScene" uid="uid://c3bwqlncgf64g" path="res://scenes/hurtbox.tscn" id="3_ablg5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_14xon"]
radius = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_etcpm"]
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jf374"]
radius = 24.19

[sub_resource type="Animation" id="Animation_00ij2"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_6cvr1"]
resource_name = "move_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 2, 3]
}

[sub_resource type="Animation" id="Animation_mlb7x"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_fjfdi"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_vlt71"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1mi8"]
_data = {
"die": SubResource("Animation_00ij2"),
"move_down": SubResource("Animation_6cvr1"),
"move_left": SubResource("Animation_mlb7x"),
"move_right": SubResource("Animation_fjfdi"),
"move_up": SubResource("Animation_vlt71")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vkh1q"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g3fwj"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ny4dw"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pd6he"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l8xyi"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_og2fg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_g3fwj")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ny4dw")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pd6he")
blend_point_2/pos = Vector2(-1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_l8xyi")
blend_point_3/pos = Vector2(1.1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dmh5d"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iixye"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6stom"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ly228"]
states/die/node = SubResource("AnimationNodeAnimation_vkh1q")
states/die/position = Vector2(498, 100)
states/move/node = SubResource("AnimationNodeBlendSpace2D_og2fg")
states/move/position = Vector2(339, 100)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_dmh5d"), "move", "die", SubResource("AnimationNodeStateMachineTransition_iixye"), "die", "End", SubResource("AnimationNodeStateMachineTransition_6stom")]
graph_offset = Vector2(-134, 50)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_okgwv")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1.8, 1.8)
texture = ExtResource("2_4gel4")
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_14xon")

[node name="NextDirectionRotator" type="Node2D" parent="."]

[node name="BodyTest" type="Polygon2D" parent="NextDirectionRotator"]
visible = false
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="NextDirectionPoly" type="Polygon2D" parent="NextDirectionRotator"]
color = Color(0.968627, 0.431373, 0, 0.733333)
polygon = PackedVector2Array(31, -12, 54, -12, 54, -23, 76, 0, 55, 21, 55, 11, 31, 11)

[node name="NextDirectionDetector" type="Node2D" parent="NextDirectionRotator"]

[node name="RayCast2DLeft" type="RayCast2D" parent="NextDirectionRotator/NextDirectionDetector"]
position = Vector2(20, -22)
rotation = -1.57079
target_position = Vector2(-0.000238426, 10)

[node name="RayCast2DRight" type="RayCast2D" parent="NextDirectionRotator/NextDirectionDetector"]
position = Vector2(20, 22)
rotation = -1.57079
target_position = Vector2(-0.000238426, 10)

[node name="Hurtbox" parent="." node_paths=PackedStringArray("actor_to_hurt") instance=ExtResource("3_ablg5")]
collision_mask = 4
actor_to_hurt = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_etcpm")
debug_color = Color(0.45098, 0.47451, 1, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_jf374")
debug_color = Color(1, 0.321569, 0.290196, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p1mi8")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_p1mi8")
}
tree_root = SubResource("AnimationNodeStateMachine_ly228")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = Vector2(0, 0)

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
